[project]
name = "nodeseek-api-signin"
version = "1.0.0"
description = "NodeSeek API signin"
authors = [
    {name = "Me0wo"},
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
dependencies = [
    "curl_cffi>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/Sn0wo2/nodeseek-api-signin"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
